--- a/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.Rmd
+++ b/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.Rmd
@@ -84,27 +84,31 @@ lapply(not_plasmid_linked_ESCrE_,FUN=function(x){
 }) %>% lapply(.,gontjesr::favorite_kable)
 ```
 
-# Example cases explained by ESCrE but not strain
-## 100H - Different E. coli ST - Linked by blaEC-8, but this was on the chromosome of both genomes...
-## 169H- Different E. coli ST 131 clusters - Linked by CTX-M-15 and blaEC-5*. While blaEC-5 was chromosomal, CTX-M-15 was found on plasmid in 1 isolate, suggestive of HGT and/or co-colonization... 
-## 1H - Initial colonized with E. coli ST69 with blaCTX-M-15 and blaEC-8*. While blaEC-8 was found in subsequent chromosome of E. coli ST6321 strain, blaCTX-M-15 was found on a plasmid in every strain collected!!
+# Summary: Four cases where prolonged colonization at species-level found, but not strain-level
 
+## One case was different sequence type but not shared ESCrE gene (i.e., acquisition)
 ```{r,results='asis'}
-same_ESCrE_not_same_strain <- prolonged_colonization_df %>% subset(index_at_1_and_or_2_Species_ST_cluster==0 & index_at_1_and_or_2_ESCrE_genes==1) %>% .$household
+same_ESCrE_species_not_same_strain_no_ESBL_sharing <- prolonged_colonization_df %>% subset(index_at_1_and_or_2_Species_ST_cluster==0 & index_at_1_and_or_2_ESCrE_genes==0 &index_at_1_and_or_2_Species==1) %>% .$household
 
-lapply(same_ESCrE_not_same_strain,FUN=function(x){
+lapply(same_ESCrE_species_not_same_strain_no_ESBL_sharing,FUN=function(x){
   
   df_index %>% subset(household==x) %>% select(household,genomic_id,Species_ST_cluster,visit,plasmids,bla_genes,ESCrE_genes,ESCrE_plasmidic_genes,  bla_chromosome_genes,ESCrE_chromosome_genes,ESCrE_plasmid_genes,bla_plasmids,ESCrE_plasmids) %>% arrange(visit)   
 }) %>% lapply(.,gontjesr::favorite_kable)
 ```
 
-# Unexplained 
+
+
+## Example cases explained by ESCrE but not strain
+### Novel strain acquisition:
+#### 1. 100H - Different E. coli ST - Linked by blaEC-8, but this was on the chromosome of both genomes...
+#### 2. 169H- Different E. coli ST 131 clusters - Linked by CTX-M-15 and blaEC-5*. While blaEC-5 was chromosomal, CTX-M-15 was found on plasmid in 1 isolate, suggestive of HGT and/or co-colonization... 
+### Plasmid sharing:
+#### 1. 1H - Initial colonized with E. coli ST69 with blaCTX-M-15 and blaEC-8*. While blaEC-8 was found in subsequent chromosome of E. coli ST6321 strain, blaCTX-M-15 was found on a plasmid in every strain collected!!
+
 ```{r,results='asis'}
-notexplained <- prolonged_colonization_df %>% subset(index_at_1_and_or_2_Species_ST_cluster==0 & index_at_1_and_or_2_ESCrE_genes==0) %>% .$household
+same_ESCrE_not_same_strain <- prolonged_colonization_df %>% subset(index_at_1_and_or_2_Species_ST_cluster==0 & index_at_1_and_or_2_ESCrE_genes==1) %>% .$household
 
-paste0("Not explained: ",length(notexplained))
-
-lapply(notexplained,FUN=function(x){
+lapply(same_ESCrE_not_same_strain,FUN=function(x){
   
   df_index %>% subset(household==x) %>% select(household,genomic_id,Species_ST_cluster,visit,plasmids,bla_genes,ESCrE_genes,ESCrE_plasmidic_genes,  bla_chromosome_genes,ESCrE_chromosome_genes,ESCrE_plasmid_genes,bla_plasmids,ESCrE_plasmids) %>% arrange(visit)   
 }) %>% lapply(.,gontjesr::favorite_kable)
